--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+h1 {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 40px 0px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  background-color: white;
+  width: 400px;
+  height: 200px;
+  margin: 20px;
+  padding: 25px;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.card-name {
+  font-size: 1.2rem;
+  font-weight: bold;
+  letter-spacing: 1.2px;
+  text-align: center;
+}
+
+.card-email {
+  text-align: center;
+}
+
+.card-avatar {
+  width: 80px !important;
+  height: 80px !important;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
+}
+
+.page {
+  display: flex;
+  justify-content: center;
+  
+}
+
+.page-card {
+  background-color: white !important;
+  width: 700px;
+  padding: 20px;
+  margin: 10rem 0rem;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+
+  .card {
+    background-color: white;
+    width: 300px;
+    height: 160px;
+    margin: 20px;
+    padding: 25px;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+      0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+      0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+      0 100px 80px rgba(0, 0, 0, 0.12);
   }
-  to {
-    transform: rotate(360deg);
+
+  .page-card {
+    background-color: white !important;
+    width: 300px;
+    padding: 20px;
+    margin: 10rem 0rem;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
   }
 }
